Remove "Git" from hostname

--- a/configs.pk3dir/profile-smb.cfg
+++ b/configs.pk3dir/profile-smb.cfg
@@ -6,7 +6,7 @@ set _servertag "[HUB] SMB"
 set _continent "Australian"
 set _continent_small "AU"
 set _location "Queensland"
-set _version "Git "
+set _version ""
 hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
