--- a/configs.pk3dir/profile-wtwrp.cfg
+++ b/configs.pk3dir/profile-wtwrp.cfg
@@ -6,7 +6,7 @@ set _servertag "[HUB] WTWRP"
 set _continent "European"
 set _continent_small "EU"
 set _location "Germany"
-set _version "Git "
+set _version ""
 hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
