--- a/configs.pk3dir/profile-bitmissile.cfg
+++ b/configs.pk3dir/profile-bitmissile.cfg
@@ -6,7 +6,7 @@ set _servertag "[HUB] Bitmissile"
 set _continent "American"
 set _continent_small "NA"
 set _location "New Jersey"
-set _version "Git "
+set _version ""
 hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
