More cleanup, add section for _pickup_options and such

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -33,15 +33,14 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
-// information used for pickup bot if your server is added to that (see #xonotic.pickup on irc.quakenet.org)
-set _pickup_gamemodes "duel dm ft tdm ctf ca assault ka nb dom kh arena lms ons"
-set _pickup_options ""
 
+// =======================
+//  Server identification
+// =======================
 alias _voting_enabled_1 "set _voting_string \"extra votable options\""
 alias _voting_enabled_0 "set _voting_string \"limited votable options\""
 _voting_enabled_${_allow_extra_votes}
 
-// server identification
 set _description "${_hookdescription}"
 set _motd_description "${_description} ${_server_type} server with ${_voting_string}"
 exec profile-${_profile}.cfg
@@ -201,6 +200,17 @@ add_alias_NvN ft
 //add_alias_NvN ons
 //add_alias_NvN nb
 //add_alias_NvN dom
+
+
+// =======================
+//  Pickup server options
+// =======================
+// information used for pickup bot if your server is added to that (see #xonotic.pickup on irc.quakenet.org)
+alias _set_pickup_modes_1 "set _pickup_gamemodes \"duel dm ft tdm ctf ca assault ka nb dom kh arena lms ons\""
+alias _set_pickup_modes_0 "set _pickup_gamemodes \"\""
+_set_pickup_modes_${_allow_extra_votes}
+
+set _pickup_options ""
 
 
 // ==========
