Clean up the hooks and add consistent naming scheme to them

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -6,13 +6,12 @@
 set _done_initializing 0
 
 // hooks to be passed to this file:
-alias check_hmo_${_hookmode} "set _hookmode ctf"; check_hmo_${_hookmode} // _hookmode: Game mode command to execute
-alias check_hmu_${_hookmutator} "set _hookmutator \"\""; check_hmu_${_hookmutator} // _hookmutator: Mutator command to execute (e.g. jetpack)
-alias check_hde_${_hookdescription} "set _hookdescription ${_hookmode}"; check_hde_${_hookdescription} // _hookdescription: Readable string for game mode and mutator
-alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_allow_extra_votes} // Allow extra votes (like mutators, private matches, etc) to be added 
-alias check_sty_${_server_type} "set _server_type public"; check_sty_${_server_type} // switch between tourney (strict gameplay settings with special votes), pickup (tourney but less strict), public (totally non-strict)
-alias check_spo_${_server_port} "set _server_port 27000"; check_spo_${_server_port}
-alias check_spu_${_server_public} "set _server_public 1"; check_spu_${_server_public}
+alias check_hmo_${_hooked_commands} "set _hooked_commands ctf"; check_hmo_${_hooked_commands} // _hooked_commands: game commands to execute upon initialization
+alias check_hde_${_hooked_desc} "set _hooked_desc ${_hooked_commands}"; check_hde_${_hooked_desc} // _hooked_desc: readable string for server settings
+alias check_hty_${_hooked_type} "set _hooked_type public"; check_hty_${_hooked_type} // _hooked_type: switch between tourney (strict gameplay settings with special votes), pickup (tourney but less strict), public (totally non-strict)
+alias check_hpo_${_hooked_port} "set _hooked_port 27000"; check_hpo_${_hooked_port} // _hooked_port: port that this server will use
+alias check_hpu_${_hooked_public} "set _hooked_public 1"; check_hpu_${_hooked_public} // _hooked_public: boolean choice for whether the server is sv_public or not
+alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_allow_extra_votes} // _allow_extra_votes: let people vote for extra things like mutators, different game settings, etc
 
 
 // ==========================
@@ -41,8 +40,8 @@ alias _voting_enabled_1 "set _voting_string \"extra votable options\""
 alias _voting_enabled_0 "set _voting_string \"limited votable options\""
 _voting_enabled_${_allow_extra_votes}
 
-set _description "${_hookdescription}"
-set _motd_description "${_description} ${_server_type} server with ${_voting_string}"
+set _description "${_hooked_desc}"
+set _motd_description "${_description} ${_hooked_type} server with ${_voting_string}"
 exec profile-${_profile}.cfg
 
 
@@ -77,9 +76,9 @@ alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 
 // important note:
 //  if a gametype alias from down below uses a cvar, its default must be added to default_settings
 alias default_settings "_nomutators; exec balanceXonotic.cfg; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
-alias tourney_settings "default_settings; _server_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
-alias pickup_settings "default_settings; _server_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
-alias public_settings "default_settings; _server_type public; enablebots; g_start_delay 15"
+alias tourney_settings "default_settings; _hooked_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias pickup_settings "default_settings; _hooked_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias public_settings "default_settings; _hooked_type public; enablebots; g_start_delay 15"
 
 add_extra_vote "tourney_settings pickup_settings public_settings"
 
@@ -138,20 +137,20 @@ alias public-ons      "_maplist_all;   gametype ons;    "
 // ========================
 //  Core game mode aliases
 // ========================
-alias duel        "${_server_type}_settings;  ${_server_type}-duel;   do_endmatch"
-alias dm          "${_server_type}_settings;  ${_server_type}-dm;     do_endmatch"
-alias freezetag   "${_server_type}_settings;  ${_server_type}-ft;     do_endmatch"
-alias tdm         "${_server_type}_settings;  ${_server_type}-tdm;    do_endmatch"
-alias ctf         "${_server_type}_settings;  ${_server_type}-ctf;    do_endmatch"
-alias ca          "${_server_type}_settings;  ${_server_type}-ca;     do_endmatch"
-alias assault     "${_server_type}_settings;  ${_server_type}-as;     do_endmatch"
-alias keepaway    "${_server_type}_settings;  ${_server_type}-ka;     do_endmatch"
-alias nexball     "${_server_type}_settings;  ${_server_type}-nb;     do_endmatch"
-alias domination  "${_server_type}_settings;  ${_server_type}-dom;    do_endmatch"
-alias keyhunt     "${_server_type}_settings;  ${_server_type}-kh;     do_endmatch"
-alias arena       "${_server_type}_settings;  ${_server_type}-arena;  do_endmatch"
-alias lms         "${_server_type}_settings;  ${_server_type}-lms;    do_endmatch"
-alias onslaught   "${_server_type}_settings;  ${_server_type}-ons;    do_endmatch"
+alias duel        "${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
+alias dm          "${_hooked_type}_settings;  ${_hooked_type}-dm;     do_endmatch"
+alias freezetag   "${_hooked_type}_settings;  ${_hooked_type}-ft;     do_endmatch"
+alias tdm         "${_hooked_type}_settings;  ${_hooked_type}-tdm;    do_endmatch"
+alias ctf         "${_hooked_type}_settings;  ${_hooked_type}-ctf;    do_endmatch"
+alias ca          "${_hooked_type}_settings;  ${_hooked_type}-ca;     do_endmatch"
+alias assault     "${_hooked_type}_settings;  ${_hooked_type}-as;     do_endmatch"
+alias keepaway    "${_hooked_type}_settings;  ${_hooked_type}-ka;     do_endmatch"
+alias nexball     "${_hooked_type}_settings;  ${_hooked_type}-nb;     do_endmatch"
+alias domination  "${_hooked_type}_settings;  ${_hooked_type}-dom;    do_endmatch"
+alias keyhunt     "${_hooked_type}_settings;  ${_hooked_type}-kh;     do_endmatch"
+alias arena       "${_hooked_type}_settings;  ${_hooked_type}-arena;  do_endmatch"
+alias lms         "${_hooked_type}_settings;  ${_hooked_type}-lms;    do_endmatch"
+alias onslaught   "${_hooked_type}_settings;  ${_hooked_type}-ons;    do_endmatch"
 
 alias as "assault"
 alias dom "domination"
@@ -171,19 +170,19 @@ add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh key
 //  modeNonN
 
 alias add_alias_2v2_variant "alias ${1}2v2 \"2v2${1}\"; alias ${1}2on2 \"2v2${1}\"; alias 2on2${1} \"2v2${1}\""
-alias add_alias_2v2 "alias 2v2${1} \"${_server_type}_settings; ${_server_type}-${1}; g_maxplayers 4;   do_endmatch\"; add_alias_2v2_variant ${1}; add_extra_vote \"2v2${1} 2on2${1} ${1}2v2 ${1}2on2\""
+alias add_alias_2v2 "alias 2v2${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 4;   do_endmatch\"; add_alias_2v2_variant ${1}; add_extra_vote \"2v2${1} 2on2${1} ${1}2v2 ${1}2on2\""
 
 alias add_alias_3v3_variant "alias ${1}3v3 \"3v3${1}\"; alias ${1}3on3 \"3v3${1}\"; alias 3on3${1} \"3v3${1}\""
-alias add_alias_3v3 "alias 3v3${1} \"${_server_type}_settings; ${_server_type}-${1}; g_maxplayers 6;   do_endmatch\"; add_alias_3v3_variant ${1}; add_extra_vote \"3v3${1} 3on3${1} ${1}3v3 ${1}3on3\""
+alias add_alias_3v3 "alias 3v3${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 6;   do_endmatch\"; add_alias_3v3_variant ${1}; add_extra_vote \"3v3${1} 3on3${1} ${1}3v3 ${1}3on3\""
 
 alias add_alias_4v4_variant "alias ${1}4v4 \"4v4${1}\"; alias ${1}4on4 \"4v4${1}\"; alias 4on4${1} \"4v4${1}\""
-alias add_alias_4v4 "alias 4v4${1} \"${_server_type}_settings; ${_server_type}-${1}; g_maxplayers 8;   do_endmatch\"; add_alias_4v4_variant ${1}; add_extra_vote \"4v4${1} 4on4${1} ${1}4v4 ${1}4on4\""
+alias add_alias_4v4 "alias 4v4${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 8;   do_endmatch\"; add_alias_4v4_variant ${1}; add_extra_vote \"4v4${1} 4on4${1} ${1}4v4 ${1}4on4\""
 
 alias add_alias_5v5_variant "alias ${1}5v5 \"5v5${1}\"; alias ${1}5on5 \"5v5${1}\"; alias 5on5${1} \"5v5${1}\""
-alias add_alias_5v5 "alias 5v5${1} \"${_server_type}_settings; ${_server_type}-${1}; g_maxplayers 10;  do_endmatch\"; add_alias_5v5_variant ${1}; add_extra_vote \"5v5${1} 5on5${1} ${1}5v5 ${1}5on5\""
+alias add_alias_5v5 "alias 5v5${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 10;  do_endmatch\"; add_alias_5v5_variant ${1}; add_extra_vote \"5v5${1} 5on5${1} ${1}5v5 ${1}5on5\""
 
 alias add_alias_6v6_variant "alias ${1}6v6 \"6v6${1}\"; alias ${1}6on6 \"6v6${1}\"; alias 6on6${1} \"6v6${1}\""
-alias add_alias_6v6 "alias 6v6${1} \"${_server_type}_settings; ${_server_type}-${1}; g_maxplayers 12;  do_endmatch\"; add_alias_6v6_variant ${1}; add_extra_vote \"6v6${1} 6on6${1} ${1}6v6 ${1}6on6\""
+alias add_alias_6v6 "alias 6v6${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 12;  do_endmatch\"; add_alias_6v6_variant ${1}; add_extra_vote \"6v6${1} 6on6${1} ${1}6v6 ${1}6on6\""
 
 alias add_alias_NvN "add_alias_2v2 $1; add_alias_3v3 $1; add_alias_4v4 $1; add_alias_5v5 $1; add_alias_6v6 $1"
 
@@ -298,16 +297,15 @@ bot_suffix " ^4bot" // append this to all botnames
 // ============
 // now that the aliases and commands exist, lets set up the gameplay settings
 g_warmup_limit -1 // todo: get rid of this once g_warmup_limit 0 actually works properly
-${_hookmode} // finally execute a chosen game mode from the aliases.cfg file
-${_hookmutator} // also mutator?
+${_hooked_commands} // finally execute a chosen game mode from the aliases.cfg file
 
 
 // =================
 //  Technical Setup
 // =================
-port ${_server_port} // all our servers start at 27000, they'll be defined in the start script
+port ${_hooked_port} // all our servers start at 27000, they'll be defined in the start script
 maxplayers 32
-sv_public ${_server_public}
+sv_public ${_hooked_public}
 sv_status_privacy 0
 sv_maxrate 30000
 timestamps 1
