Add _hooked_profile option

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -6,6 +6,7 @@
 set _done_initializing 0
 
 // hooks to be passed to this file:
+alias check_hpr_${_hooked_profile} "set _hooked_profile default"; check_hpr_${_hooked_profile} // _hooked_profile: server identification 
 alias check_hmo_${_hooked_commands} "set _hooked_commands ctf"; check_hmo_${_hooked_commands} // _hooked_commands: game commands to execute upon initialization
 alias check_hde_${_hooked_desc} "set _hooked_desc ${_hooked_commands}"; check_hde_${_hooked_desc} // _hooked_desc: readable string for server settings
 alias check_hty_${_hooked_type} "set _hooked_type public"; check_hty_${_hooked_type} // _hooked_type: switch between tourney (strict gameplay settings with special votes), pickup (tourney but less strict), public (totally non-strict)
@@ -42,7 +43,7 @@ _voting_enabled_${_allow_extra_votes}
 
 set _description "${_hooked_desc}"
 set _motd_description "${_description} ${_hooked_type} server with ${_voting_string}"
-exec profile-${_profile}.cfg
+exec profile-${_hooked_profile}.cfg
 
 
 // =======================
