--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -320,11 +320,11 @@ prvm_errordump 1
 // ===============================
 g_ban_sync_uri "http://46.38.241.138/~xonotic/bans/" // sync bans using this ban list provider (disabled by default, uncomment this line to enable)
 //g_ban_sync_trusted_servers "" // accept bans that were initially set on the server IPs listed here (if not set, your bans are just sent to the sync URIs, but no bans are retrieved from there)
-log_file "${_profile}${sessionid}.console.log"
+log_file "${_hooked_profile}${sessionid}.console.log"
 log_file_stripcolors 1
 condump_stripcolors 1
-sv_weaponstats_file "http://xonotic.org/weaponbalance/ ${_profile}${sessionid}.wstats.log"
-g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_profile}${sessionid}.pstats.log"
+sv_weaponstats_file "http://xonotic.org/weaponbalance/ ${_hooked_profile}${sessionid}.wstats.log"
+g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_hooked_profile}${sessionid}.pstats.log"
 
 
 // allow game mode commands with do_restart to actually restart the server now
