Attempt to fix an issue with add_extra_vote

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -20,9 +20,9 @@ alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_a
 //  Other supporting aliases
 // ==========================
 // if _allow_extra_votes is set, then votes for game modes and mutators and other options for the server will be added.
-alias add_extra_vote_1 "addvote $*"
-alias add_extra_vote_0 "echo NOTE: Extra votes are disabled, skipping \"$*\""
-alias add_extra_vote "add_extra_vote_${_allow_extra_votes} $*"
+alias add_extra_vote_1 "addvote ${*}"
+alias add_extra_vote_0 "echo NOTE: Extra votes are disabled, skipping \"${*}\""
+alias add_extra_vote "add_extra_vote_${_allow_extra_votes} ${*}"
 
 // conditional command: run endmatch only when no longer initializing (loading map)
 alias do_endmatch_1 "endmatch"
