Add debug print to end of config

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -329,3 +329,4 @@ ${_hooked_commands} // finally execute a chosen game mode from the aliases.cfg f
 
 // allow game mode commands with do_restart to actually restart the server now
 set _done_initializing 1
+echo "sv-hookable.cfg: Done initializing!"
