Try using alias for commands part

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -11,7 +11,7 @@ alias check_hpo_${_hooked_port} "set _hooked_port 27000"; check_hpo_${_hooked_po
 alias check_hpu_${_hooked_public} "set _hooked_public 1"; check_hpu_${_hooked_public} // _hooked_public: boolean choice for whether the server is sv_public or not
 
 alias check_hty_${_hooked_type} "set _hooked_type public"; check_hty_${_hooked_type} // _hooked_type: switch between tourney (strict gameplay settings with special votes), pickup (tourney but less strict), public (totally non-strict)
-alias check_hmo_${_hooked_commands} "set _hooked_commands ctf"; check_hmo_${_hooked_commands} // _hooked_commands: game commands to execute upon initialization
+//alias check_hmo_${_hooked_commands} "set _hooked_commands ctf"; check_hmo_${_hooked_commands} // _hooked_commands: game commands to execute upon initialization
 alias check_hde_${_hooked_desc} "set _hooked_desc ${_hooked_commands}"; check_hde_${_hooked_desc} // _hooked_desc: readable string for server settings
 alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_allow_extra_votes} // _allow_extra_votes: let people vote for extra things like mutators, different game settings, etc
 
@@ -324,7 +324,7 @@ g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_hooked_profile}${ses
 // ============
 // now that the aliases and commands exist, lets set up the gameplay settings
 g_warmup_limit -1 // todo: get rid of this once g_warmup_limit 0 actually works properly
-${_hooked_commands asis} // finally execute a chosen game mode from the aliases.cfg file
+${_hooked_commands} // finally execute a chosen game mode from the aliases.cfg file
 
 
 // allow game mode commands with do_restart to actually restart the server now
