Whoops, this is not a variable we expand anymore

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -324,7 +324,7 @@ g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_hooked_profile}${ses
 // ============
 // now that the aliases and commands exist, lets set up the gameplay settings
 g_warmup_limit -1 // todo: get rid of this once g_warmup_limit 0 actually works properly
-${_hooked_commands} // finally execute a chosen game mode from the aliases.cfg file
+_hooked_commands // finally execute a chosen game mode from the aliases.cfg file
 
 
 // allow game mode commands with do_restart to actually restart the server now
