Add meleeonly to votable mutators

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -220,9 +220,10 @@ set _pickup_options ""
 // internal aliases (only used by our scripts)
 alias _jetpack "toggle g_jetpack; g_grappling_hook 0; g_start_weapon_hook -1"
 alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g_jetpack 0"
-alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_minstagib 0; g_nix 0"
-alias _minstagib "toggle g_minstagib; g_nix 0; g_weaponarena 0"
-alias _nix "toggle g_nix; g_minstagib 0; g_weaponarena 0"
+alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_melee_only 0; g_minstagib 0; g_nix 0"
+alias _meleeonly "toggle g_melee_only; g_minstagib 0; g_nix 0; g_weaponarena 0"
+alias _minstagib "toggle g_minstagib; g_melee_only 0; g_nix 0; g_weaponarena 0"
+alias _nix "toggle g_nix; g_melee_only 0; g_minstagib 0; g_weaponarena 0"
 alias _infammo "toggle g_use_ammunition"
 alias _pinata "toggle g_pinata"
 alias _midair "toggle g_midair"
@@ -235,6 +236,7 @@ alias grapplinghook "hook"
 alias weaponarena "_weaponarena; do_restart"
 alias hookarena "_weaponarena; _hook; do_restart"
 alias jetpackarena "_weaponarena; _jetpack; do_restart"
+alias meleeonly "_meleeonly; do_restart"
 alias minstagib "_minstagib; _infammo; do_restart"
 alias minstahook "_minstagib; _infammo; _hook; do_restart"
 alias minstajetpack "_minstagib; _infammo; _jetpack; do_restart"
@@ -247,7 +249,7 @@ alias dodging "_dodging; do_restart"
 alias _nomutators "g_weaponarena 0; g_minstagib 0; g_nix 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0"
 alias nomutators "_nomutators; do_restart"
 
-add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena minstagib minstahook minstajetpack nix infammo pinata midair dodging nomutators"
+add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena meleeonly minstagib minstahook minstajetpack nix infammo pinata midair dodging nomutators"
 
 
 // =================================
