Add votable_alias which cleans up the config a bit

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -34,6 +34,8 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
+alias votable_alias "alias ${* ?}; add_extra_vote ${1}"
+
 
 // =======================
 //  Server identification
@@ -78,11 +80,9 @@ alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 
 // important note:
 //  if a gametype alias from down below uses a cvar, its default must be added to default_settings
 alias default_settings "_nomutators; exec balanceXonotic.cfg; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
-alias tourney_settings "default_settings; _hooked_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
-alias pickup_settings "default_settings; _hooked_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
-alias public_settings "default_settings; _hooked_type public; enablebots; g_start_delay 15"
-
-add_extra_vote "tourney_settings pickup_settings public_settings"
+votable_alias tourney_settings "default_settings; _hooked_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+votable_alias pickup_settings "default_settings; _hooked_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+votable_alias public_settings "default_settings; _hooked_type public; enablebots; g_start_delay 15"
 
 
 // ===========================
@@ -139,30 +139,28 @@ alias public-ons      "_maplist_all;   gametype ons;    "
 // ========================
 //  Core game mode aliases
 // ========================
-alias duel        "${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
-alias dm          "${_hooked_type}_settings;  ${_hooked_type}-dm;     do_endmatch"
-alias freezetag   "${_hooked_type}_settings;  ${_hooked_type}-ft;     do_endmatch"
-alias tdm         "${_hooked_type}_settings;  ${_hooked_type}-tdm;    do_endmatch"
-alias ctf         "${_hooked_type}_settings;  ${_hooked_type}-ctf;    do_endmatch"
-alias ca          "${_hooked_type}_settings;  ${_hooked_type}-ca;     do_endmatch"
-alias assault     "${_hooked_type}_settings;  ${_hooked_type}-as;     do_endmatch"
-alias keepaway    "${_hooked_type}_settings;  ${_hooked_type}-ka;     do_endmatch"
-alias nexball     "${_hooked_type}_settings;  ${_hooked_type}-nb;     do_endmatch"
-alias domination  "${_hooked_type}_settings;  ${_hooked_type}-dom;    do_endmatch"
-alias keyhunt     "${_hooked_type}_settings;  ${_hooked_type}-kh;     do_endmatch"
-alias arena       "${_hooked_type}_settings;  ${_hooked_type}-arena;  do_endmatch"
-alias lms         "${_hooked_type}_settings;  ${_hooked_type}-lms;    do_endmatch"
-alias onslaught   "${_hooked_type}_settings;  ${_hooked_type}-ons;    do_endmatch"
+votable_alias duel        "${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
+votable_alias dm          "${_hooked_type}_settings;  ${_hooked_type}-dm;     do_endmatch"
+votable_alias freezetag   "${_hooked_type}_settings;  ${_hooked_type}-ft;     do_endmatch"
+votable_alias tdm         "${_hooked_type}_settings;  ${_hooked_type}-tdm;    do_endmatch"
+votable_alias ctf         "${_hooked_type}_settings;  ${_hooked_type}-ctf;    do_endmatch"
+votable_alias ca          "${_hooked_type}_settings;  ${_hooked_type}-ca;     do_endmatch"
+votable_alias assault     "${_hooked_type}_settings;  ${_hooked_type}-as;     do_endmatch"
+votable_alias keepaway    "${_hooked_type}_settings;  ${_hooked_type}-ka;     do_endmatch"
+votable_alias nexball     "${_hooked_type}_settings;  ${_hooked_type}-nb;     do_endmatch"
+votable_alias domination  "${_hooked_type}_settings;  ${_hooked_type}-dom;    do_endmatch"
+votable_alias keyhunt     "${_hooked_type}_settings;  ${_hooked_type}-kh;     do_endmatch"
+votable_alias arena       "${_hooked_type}_settings;  ${_hooked_type}-arena;  do_endmatch"
+votable_alias lms         "${_hooked_type}_settings;  ${_hooked_type}-lms;    do_endmatch"
+votable_alias onslaught   "${_hooked_type}_settings;  ${_hooked_type}-ons;    do_endmatch"
 
-alias as "assault"
-alias dom "domination"
-alias ft "freezetag"
-alias kh "keyhunt"
-alias ons "onslaught"
-alias ka "keepaway"
-alias nb "nexball"
-
-add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh keyhunt dom domination arena lms ons onslaught"
+votable_alias as "assault"
+votable_alias dom "domination"
+votable_alias ft "freezetag"
+votable_alias kh "keyhunt"
+votable_alias ons "onslaught"
+votable_alias ka "keepaway"
+votable_alias nb "nexball"
 
 // add variations upon the core aliases, this way people can easily guess an option which works:
 //  mode
@@ -230,45 +228,41 @@ alias _midair "toggle g_midair"
 alias _dodging "toggle g_dodging"
 
 // external aliases (visible to players when _allow_extra_votes is enabled, usable by rcon)
-alias jetpack "_jetpack; do_restart"
-alias hook "_hook; do_restart"
-alias grapplinghook "hook"
-alias weaponarena "_weaponarena; do_restart"
-alias hookarena "_weaponarena; _hook; do_restart"
-alias jetpackarena "_weaponarena; _jetpack; do_restart"
-alias meleeonly "_meleeonly; do_restart"
-alias minstagib "_minstagib; _infammo; do_restart"
-alias minstahook "_minstagib; _infammo; _hook; do_restart"
-alias minstajetpack "_minstagib; _infammo; _jetpack; do_restart"
-alias nix "_nix; do_restart"
-alias infammo "_infammo; do_restart"
-alias pinata "_pinata; do_restart"
-alias midair "_midair; do_restart"
-alias dodging "_dodging; do_restart"
+votable_alias jetpack "_jetpack; do_restart"
+votable_alias hook "_hook; do_restart"
+votable_alias grapplinghook "hook"
+votable_alias weaponarena "_weaponarena; do_restart"
+votable_alias hookarena "_weaponarena; _hook; do_restart"
+votable_alias jetpackarena "_weaponarena; _jetpack; do_restart"
+votable_alias meleeonly "_meleeonly; do_restart"
+votable_alias minstagib "_minstagib; _infammo; do_restart"
+votable_alias minstahook "_minstagib; _infammo; _hook; do_restart"
+votable_alias minstajetpack "_minstagib; _infammo; _jetpack; do_restart"
+votable_alias nix "_nix; do_restart"
+votable_alias infammo "_infammo; do_restart"
+votable_alias pinata "_pinata; do_restart"
+votable_alias midair "_midair; do_restart"
+votable_alias dodging "_dodging; do_restart"
 
 alias _nomutators "g_weaponarena 0; g_minstagib 0; g_nix 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0"
-alias nomutators "_nomutators; do_restart"
-
-add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena meleeonly minstagib minstahook minstajetpack nix infammo pinata midair dodging nomutators"
+votable_alias nomutators "_nomutators; do_restart"
 
 
 // =================================
 //  Playermodel options and aliases
 // =================================
 set _fullbright_model "models/player/megaerebus.iqm"
-alias sv_fbskin_model_megaerebus "_fullbright_model \"models/player/megaerebus.iqm\""
-alias sv_fbskin_model_erebus "_fullbright_model \"models/player/erebus.iqm\""
+votable_alias sv_fbskin_model_megaerebus "_fullbright_model \"models/player/megaerebus.iqm\""
+votable_alias sv_fbskin_model_erebus "_fullbright_model \"models/player/erebus.iqm\""
 
-alias sv_fbskin_unique "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors \"\""
-alias sv_fbskin_green "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 51"
-alias sv_fbskin_red "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 68"
-alias sv_fbskin_orange "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 238"
-alias sv_fbskin_rainbow "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 95"
+votable_alias sv_fbskin_unique "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors \"\""
+votable_alias sv_fbskin_green "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 51"
+votable_alias sv_fbskin_red "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 68"
+votable_alias sv_fbskin_orange "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 238"
+votable_alias sv_fbskin_rainbow "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbright_model}; sv_defaultplayerskin 1; sv_defaultplayercolors 95"
 
 // use sv_fbskin_unique by default
 sv_fbskin_unique
-
-add_extra_vote "sv_fbskin_model_megaerebus sv_fbskin_model_erebus sv_fbskin_unique sv_fbskin_green sv_fbskin_orange sv_fbskin_red sv_fbskin_rainbow sv_fbskin_off"
 
 
 // ===========================================
@@ -278,11 +272,10 @@ sv_vote_commands "restart fraglimit chmap gotomap nextmap endmatch reducematchti
 sv_vote_call 1 // 0 will disable the normal voting
 sv_vote_master 0 // 0 will disable voting to become master, good if you prefer to use the master password instead
 
-alias warmup "toggle g_warmup; do_restart"
-alias enablebots "minplayers 4"
-alias nobots "minplayers 0; bot_number 0"
+votable_alias warmup "toggle g_warmup; do_restart"
+votable_alias enablebots "minplayers 4"
+votable_alias nobots "minplayers 0; bot_number 0"
 
-add_extra_vote "enablebots nobots warmup"
 add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye g_shootfromcenter"
 
 
