--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -221,6 +221,7 @@ alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g
 alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_melee_only 0; g_minstagib 0; g_nix 0"
 alias _meleeonly "toggle g_melee_only; g_minstagib 0; g_nix 0; g_weaponarena 0"
 alias _minstagib "toggle g_minstagib; g_melee_only 0; g_nix 0; g_weaponarena 0"
+alias _nades "toggle g_nades"
 alias _nix "toggle g_nix; g_melee_only 0; g_minstagib 0; g_weaponarena 0"
 alias _infammo "toggle g_use_ammunition"
 alias _pinata "toggle g_pinata"
@@ -238,6 +239,7 @@ votable_alias meleeonly "_meleeonly; do_restart"
 votable_alias minstagib "_minstagib; _infammo; do_restart"
 votable_alias minstahook "_minstagib; _infammo; _hook; do_restart"
 votable_alias minstajetpack "_minstagib; _infammo; _jetpack; do_restart"
+votable_alias nades "_nades; do_restart"
 votable_alias nix "_nix; do_restart"
 votable_alias infammo "_infammo; do_restart"
 votable_alias pinata "_pinata; do_restart"
