Add more mutators, courtesy of Mario :)

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -218,15 +218,19 @@ set _pickup_options ""
 // internal aliases (only used by our scripts)
 alias _jetpack "toggle g_jetpack; g_grappling_hook 0; g_start_weapon_hook -1"
 alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g_jetpack 0"
-alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_melee_only 0; g_minstagib 0; g_nix 0"
-alias _meleeonly "toggle g_melee_only; g_minstagib 0; g_nix 0; g_weaponarena 0"
-alias _minstagib "toggle g_minstagib; g_melee_only 0; g_nix 0; g_weaponarena 0"
+alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_melee_only 0; g_new_toys 0; g_minstagib 0; g_nix 0"
+alias _meleeonly "toggle g_melee_only; g_minstagib 0; g_nix 0; g_new_toys 0; g_weaponarena 0"
+alias _minstagib "toggle g_minstagib; g_melee_only 0; g_nix 0; g_new_toys 0; g_weaponarena 0"
 alias _nades "toggle g_nades"
 alias _nix "toggle g_nix; g_melee_only 0; g_minstagib 0; g_weaponarena 0"
 alias _infammo "toggle g_use_ammunition"
 alias _pinata "toggle g_pinata"
 alias _midair "toggle g_midair"
 alias _dodging "toggle g_dodging"
+alias _randomgravity "toggle g_random_gravity"
+alias _multijump "toggle g_multijump"
+alias _newtoys "toggle g_new_toys; g_minstagib 0; g_nix 0; g_weaponarena 0"
+alias _vampire "toggle g_vampire"
 
 // external aliases (visible to players when _allow_extra_votes is enabled, usable by rcon)
 votable_alias jetpack "_jetpack; do_restart"
@@ -245,8 +249,12 @@ votable_alias infammo "_infammo; do_restart"
 votable_alias pinata "_pinata; do_restart"
 votable_alias midair "_midair; do_restart"
 votable_alias dodging "_dodging; do_restart"
+votable_alias randomgravity "_randomgravity; do_restart"
+votable_alias multijump "_multijump; do_restart"
+votable_alias newtoys "_newtoys; do_restart"
+votable_alias vampire "_vampire; do_restart"
 
-alias _nomutators "g_weaponarena 0; g_minstagib 0; g_nix 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0"
+alias _nomutators "g_nades 0; g_melee_only 0; g_weaponarena 0; g_minstagib 0; g_nix 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0; g_random_gravity 0; g_multijump 0; g_new_toys 0; g_vampire 0"
 votable_alias nomutators "_nomutators; do_restart"
 
 
