Set maxplayers for the servers as well

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -7,6 +7,7 @@ set _done_initializing 0
 
 // hooks to be passed to this file:
 alias check_hpr_${_hooked_profile} "set _hooked_profile default"; check_hpr_${_hooked_profile} // _hooked_profile: server identification
+alias check_hpl_${_hooked_players} "set _hooked_players 20"; check_hpl_${_hooked_players} // _hooked_players: port that this server will use
 alias check_hpo_${_hooked_port} "set _hooked_port 27000"; check_hpo_${_hooked_port} // _hooked_port: port that this server will use
 alias check_hpu_${_hooked_public} "set _hooked_public 1"; check_hpu_${_hooked_public} // _hooked_public: boolean choice for whether the server is sv_public or not
 
@@ -303,7 +304,7 @@ bot_suffix " ^4bot" // append this to all botnames
 //  Technical Setup
 // =================
 port ${_hooked_port} // all our servers start at 27000, they'll be defined in the start script
-maxplayers 32
+maxplayers ${_hooked_players}
 sv_public ${_hooked_public}
 sv_status_privacy 0
 sv_maxrate 30000
