Temporarily switch to "HUB" for bot prefix

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -296,7 +296,7 @@ add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye
 bot_number 0 // number of bots to add
 skill 10 // the bots skill level
 minplayers 0 // add bots if less then that number of players playing
-bot_prefix "^4[^0M^4i^0T^4]^0" // prefix this to all botnames
+bot_prefix "^4[^0H^4U^0B^4]^0" // prefix this to all botnames
 bot_suffix " ^4bot" // append this to all botnames
 
 
