Directly set minplayers 2 for duel in pickup and public matches

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -104,7 +104,7 @@ alias tourney-arena    "_maplist_all;   gametype arena;  "
 alias tourney-lms      "_maplist_all;   gametype lms;    "
 alias tourney-ons      "_maplist_all;   gametype ons;    "
 
-alias pickup-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 10"
+alias pickup-duel     "_maplist_duel;  gametype dm;     minplayers 2; g_maxplayers 2; g_powerups 0; timelimit_override 10"
 alias pickup-dm       "_maplist_dm;    gametype dm;     "
 alias pickup-ft       "_maplist_all;   gametype ft;     "
 alias pickup-tdm      "_maplist_tdm;   gametype tdm;    "
@@ -119,7 +119,7 @@ alias pickup-arena    "_maplist_all;   gametype arena;  "
 alias pickup-lms      "_maplist_all;   gametype lms;    "
 alias pickup-ons      "_maplist_all;   gametype ons;    "
 
-alias public-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 10"
+alias public-duel     "_maplist_duel;  gametype dm;     minplayers 2; g_maxplayers 2; g_powerups 0; timelimit_override 10"
 alias public-dm       "_maplist_dm;    gametype dm;     "
 alias public-ft       "_maplist_all;   gametype ft;     "
 alias public-tdm      "_maplist_tdm;   gametype tdm;    "
