Try some other things...

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -46,15 +46,15 @@ dp_secure = 1
 #dp_listen = 0
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
-dp_listen_from_server = 64.237.42.68
+#dp_listen_from_server = 64.237.42.68
 #irc_admin_timeout = 3600
 #irc_admin_quote_re =
 #irc_local = 0
 dp_utf8_enable = 1
 #irc_ping_delay = 300
-irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
-irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
-irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
+#irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
+#irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
+#irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
 
 # Example: Gamesurge AuthServ (does not provide ghosting)
 #irc_nickserv_password = mypassword
