Try enabling dp_listen

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -43,10 +43,10 @@ irc_announce_mapchange = notempty
 dp_game = Xonotic
 dp_secure = 2
 #dp_server_from_wan = smb.qc.to
-#dp_listen = 0
+dp_listen = 1
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
-dp_listen_from_server = 176.9.65.177:39999
+dp_listen_from_server = 176.9.65.177
 #irc_admin_timeout = 3600
 #irc_admin_quote_re =
 #irc_local = 0
