--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -1,5 +1,5 @@
 # DarkPlaces server data
-dp_server = 64.237.42.68:30160
+dp_server = 127.0.0.1:30160
 dp_password = replaceme
 
 # IRC configuration
@@ -43,7 +43,7 @@ irc_announce_mapchange = notempty
 dp_game = Xonotic
 dp_secure = 1
 #dp_server_from_wan = smb.qc.to
-dp_listen = 176.9.65.177
+#dp_listen = 176.9.65.177
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
 dp_listen_from_server = 176.9.65.177
