--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -8,6 +8,7 @@ irc_server = 176.9.65.177:39999
 # 176.9.65.177:39999
 irc_password = example
 irc_user = hub-
+irc_nickprefix = <na-duel>
 irc_nick = na-duel
 irc_nick_alternates = na-duel_ na-duel__
 irc_channel = #xonotic.hub
