Fix some things

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -8,7 +8,7 @@ irc_server = 176.9.65.177:39999
 # 176.9.65.177:39999
 irc_password = example
 irc_user = hub-
-irc_nickprefix = <na-duel>
+irc_nickprefix = <na-duel> 
 irc_nick = na-duel
 irc_nick_alternates = na-duel_ na-duel__
 irc_channel = #xonotic.hub
@@ -43,7 +43,7 @@ irc_announce_mapchange = notempty
 # Tuning
 dp_game = Xonotic
 dp_secure = 1
-#dp_server_from_wan = smb.qc.to
+dp_server_from_wan = xonotic.bitmissile.com
 #dp_listen = 176.9.65.177
 #dp_status_delay = 30
 #irc_reconnect_delay = 300
