Other updates to triggers

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -33,7 +33,7 @@ irc_quakenet_authusers = Samual
 #plugins =
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
-irc_trigger = foobar
+irc_trigger = hub-all
 
 # Custom output options
 irc_announce_slotsfree = 1
