--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -30,7 +30,7 @@ irc_quakenet_authusers = Samual
 #irc_commands = PRIVMSG Admin :hello, I am there; MODE $nick +x
 
 # Extra plug-ins to load
-plugins = joinparts.pl
+plugins = joinsparts.pl
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
 irc_trigger = hub-all
